src/fpl2cc/test/errm.test/a.errm
HAI

"foo"
"bar"
"bat"
    "aint no terminator
